Fixed header spacing

--- a/src/modules/action-bar/ActionBar.css
+++ b/src/modules/action-bar/ActionBar.css
@@ -4,7 +4,7 @@
 
 section {
   text-align: center;
-  padding: var(--space-m);
+  padding: 0 var(--space-m);
   max-width: 60rem;
   margin: auto;
 }
